--- a/index.html
+++ b/index.html
@@ -3,92 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quimica</title>
+    <title>Quimica Unidad 3</title>
     <link rel="icon" href="/assets/logo.png" type="image/png" />
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-      body {
-        background-color: #151a29;
-        color: #fff;
-        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      }
-      main {
-        display: flex;
-        flex-direction: column;
-        /* justify-content: center; */
-        align-items: center;
-        max-width: 1120px;
-        margin: auto;
-        margin-block: 40px;
-        row-gap: 10px;
-        padding-inline: 25px;
-      }
-      .header {
-        margin-top: 30px;
-        padding-inline: 25px;
 
-        div {
-          max-width: 1120px;
-          margin: auto;
-        }
-        img {
-          margin-top: 10px;
-          aspect-ratio: 18/9;
-          width: 80%;
-          object-fit: cover;
-        }
-        h1 {
-          font-size: 58px;
-          padding-block: 20px;
-        }
-      }
-      .article {
-        margin-bottom: 30px;
-      }
-      .main h2 {
-        font-size: 42px;
-        margin-block: 20px;
-      }
-      .main p {
-        font-size: 24px;
-        margin-bottom: 30px;
-        line-height: 1.45;
-        text-wrap: balance;
-      }
-      .main img {
-        aspect-ratio: 2047/1151;
-        width: 80%;
-        object-fit: cover;
-        border-radius: 15px;
-      }
-      @media (max-width: 1000px) {
-        .header h1 {
-          font-size: 52px;
-        }
-        .header img {
-          width: 100%;
-        }
-      }
-
-      @media (max-width: 750px) {
-        .main img {
-          width: 100%;
-        }
-      }
-    </style>
+    <meta name="view-transition" content="same-origin" />
+    <link rel="stylesheet" href="/styles/layout.css">
+    <link rel="stylesheet" href="/styles/style.css">
   </head>
   <body>
     <header class="header">
       <div>
         <h1>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. In,
-          excepturi?
+          Enlaces químicos
         </h1>
-        <img src="/assets/header.jpg" alt="nose" />
+        <img src="/assets/vinculo-quimico.webp" alt="nose" />
       </div>
     </header>
     <main class="main">
@@ -114,7 +42,7 @@
           laudantium exercitationem rerum debitis vel nam quibusdam provident
           nobis et unde autem eos facere magnam.
         </p>
-        <img src="/assets/image.jpeg" alt="nose" />
+        <img src="/assets/enlaces.webp" alt="nose" />
       </article>
       <article>
         <h2>Titulo del subtema</h2>
@@ -130,8 +58,19 @@
           Dignissimos natus, in atque nostrum praesentium nam esse quaerat
           dolore porro labore vitae?
         </p>
-        <img src="/assets/image.jpeg" alt="nose" />
+        <img src="/assets/featured.webp" alt="nose" />
       </article>
+      <section class="section">
+        <a class="integrantes" href="/integrantes.html"><img src="/assets/members.svg" alt="Miembros"> Integrantes del equipo  </a> 
+        <aside>
+          <h3>Subtemas</h3>
+          <ul>
+            <li><a href="/introduccion.html">3.1. Introducción <img src="/assets/arrow.svg" alt=""></a></li>
+            <li><a href="/enlace-covalente.html">3.2. Enlace covalente <img src="/assets/arrow.svg" alt=""></a></li>
+            <li><a href="/enlace-ionico.html">3.3. Enlace iónico <img src="/assets/arrow.svg" alt=""></a></li>
+          </ul>
+        </aside>
+      </section>
     </main>
   </body>
 </html>
