--- a/integrantes.html
+++ b/integrantes.html
@@ -4,6 +4,62 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quimica Unidad 3 - Integrantes</title>
+    <link rel="stylesheet" href="/styles/layout.css">
+    <link rel="stylesheet" href="/styles/integrantes.css">
+    <meta name="view-transition" content="same-origin" />
   </head>
-  <body></body>
+  <body>
+    <main class="main">
+      <img class="banner" src="/assets/vinculo-quimico.webp" alt="nose" />
+      <h1><img src="/assets/members.svg" alt="Miembros"> Integrantes del equipo</h1>
+      <ul>
+        <li>
+          <img src="/assets/user.svg" alt="icono de usuario"> 
+          <p>
+            Castellanos Loreto Francisco
+            <span class="role">
+              Editor de contenido
+            </span>
+          </p>
+        </li>
+        <li>
+          <img src="/assets/user.svg" alt="icono de usuario"> 
+          <p>
+            Geran Vivani Martinez Rasgado
+            <span class="role">
+              Administrador
+            </span>
+          </p>
+        </li>
+        <li>
+          <img src="/assets/user.svg" alt="icono de usuario"> 
+          <p>
+            Yahir Escobar Contreras
+            <span class="role">
+              Marketing
+            </span>
+          </p>
+        </li>
+        <li>
+          <img src="/assets/user.svg" alt="icono de usuario"> 
+          <p>
+            Barrientos Tumalan Angel
+            <span class="role">
+              Desarrollador
+            </span>
+          </p>
+        </li>
+        <li>
+          <img src="/assets/user.svg" alt="icono de usuario"> 
+          <p>
+            Mariana Alejandra Leon González
+            <span class="role">
+              Inversionista
+            </span>
+          </p>
+        </li>
+      </ul>
+    </main>
+
+  </body>
 </html>
