--- a/enlace-covalente.html
+++ b/enlace-covalente.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quimica Unidad 3 - Enlace Covalente</title>
+  <title>Enlazando Química</title>
+  <link rel="icon" href="/assets/logo.png" type="image/png" />
   <link rel="stylesheet" href="/styles/layout.css">
 </head>
 <body>
