--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quimica Unidad 3</title>
+    <title>Enlazando Química</title>
     <link rel="icon" href="/assets/logo.png" type="image/png" />
-
-    <meta name="view-transition" content="same-origin" />
     <link rel="stylesheet" href="/styles/layout.css">
     <link rel="stylesheet" href="/styles/style.css">
   </head>
