--- a/integrantes.html
+++ b/integrantes.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quimica Unidad 3 - Integrantes</title>
+    <title>Enlazando Química</title>
+    <link rel="icon" href="/assets/logo.png" type="image/png" />
     <link rel="stylesheet" href="/styles/layout.css">
     <link rel="stylesheet" href="/styles/integrantes.css">
-    <meta name="view-transition" content="same-origin" />
   </head>
   <body>
     <main class="main">
