Actualiza diseño responsive

--- a/introduccion.html
+++ b/introduccion.html
@@ -8,6 +8,32 @@
   <link rel="stylesheet" href="/styles/layout.css">
 </head>
 <body>
+  <nav class="nav">
+    <div>
+      <ul>
+        <li>
+          <a href="/">Enlaces químicos
+          </a>
+        </li>
+        <li>
+          <a href="/introduccion.html">Introducción
+          </a>
+        </li>
+        <li>
+          <a href="/enlace-covalente.html">Enlace covalente
+          </a>
+        </li>
+        <li>
+          <a href="/enlace-ionico.html">Enlace ionico
+          </a>
+        </li>
+        <li>
+          <a href="/integrantes.html">Integrantes
+          </a>
+        </li>
+      </ul>
+    </div>
+  </nav>
   <main class="main">
     <h1>Introducción</h1>
 
