--- a/index.html
+++ b/index.html
@@ -9,6 +9,32 @@
     <link rel="stylesheet" href="/styles/style.css">
   </head>
   <body>
+    <nav class="nav">
+      <div>
+        <ul>
+          <li>
+            <a href="/">Enlaces químicos
+            </a>
+          </li>
+          <li>
+            <a href="/introduccion.html">Introducción
+            </a>
+          </li>
+          <li>
+            <a href="/enlace-covalente.html">Enlace covalente
+            </a>
+          </li>
+          <li>
+            <a href="/enlace-ionico.html">Enlace ionico
+            </a>
+          </li>
+          <li>
+            <a href="/integrantes.html">Integrantes
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
     <header class="header">
       <div>
         <h1>
@@ -40,7 +66,7 @@
           laudantium exercitationem rerum debitis vel nam quibusdam provident
           nobis et unde autem eos facere magnam.
         </p>
-        <img src="/assets/enlaces.webp" alt="nose" />
+        <img class="img" src="/assets/enlaces.webp" alt="nose" />
       </article>
       <article>
         <h2>Titulo del subtema</h2>
@@ -56,7 +82,7 @@
           Dignissimos natus, in atque nostrum praesentium nam esse quaerat
           dolore porro labore vitae?
         </p>
-        <img src="/assets/featured.webp" alt="nose" />
+        <img class="img" src="/assets/featured.webp" alt="nose" />
       </article>
       <section class="section">
         <a class="integrantes" href="/integrantes.html"><img src="/assets/members.svg" alt="Miembros"> Integrantes del equipo  </a> 
