--- a/integrantes.html
+++ b/integrantes.html
@@ -9,6 +9,32 @@
     <link rel="stylesheet" href="/styles/integrantes.css">
   </head>
   <body>
+    <nav class="nav">
+      <div>
+        <ul>
+          <li>
+            <a href="/">Enlaces químicos
+            </a>
+          </li>
+          <li>
+            <a href="/introduccion.html">Introducción
+            </a>
+          </li>
+          <li>
+            <a href="/enlace-covalente.html">Enlace covalente
+            </a>
+          </li>
+          <li>
+            <a href="/enlace-ionico.html">Enlace ionico
+            </a>
+          </li>
+          <li>
+            <a href="/integrantes.html">Integrantes
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
     <main class="main">
       <img class="banner" src="/assets/vinculo-quimico.webp" alt="nose" />
       <h1><img src="/assets/members.svg" alt="Miembros"> Integrantes del equipo</h1>
