Agrega la informacion de los subtemas

--- a/enlace-covalente.html
+++ b/enlace-covalente.html
@@ -34,9 +34,43 @@
       </ul>
     </div>
   </nav>
+  <header class="header">
+    <div>
+      <h1>
+        Enlace Covalente
+      </h1>
+      <img src="/assets/enlace-covalente.jpg" alt="nose" />
+    </div>
+  </header>
   <main class="main">
-    <h1>Enlace Covalente</h1>
-
+    <p>
+      El enlace covalente es un tipo de enlace químico en el cual dos átomos comparten uno o más pares de electrones en su capa más externa. Este tipo de enlace se forma entre átomos con electronegatividades similares y puede ser polar o no polar según la diferencia en la electronegatividad de los átomos involucrados.
+    </p>
+    <p><u>Para explicar el enlace covalente y sus alcances, existen varias teorías:</u></p>
+    <ul>
+      <li>
+        <p><strong>Teoría del enlace de valencia:</strong> propuesta por Linus Pauling, esta teoría describe el enlace covalente en términos de superposición de orbitales atómicos para formar enlaces sigma y pi. También explica la dirección y la longitud de los enlaces. </p>
+      </li>
+      <li>
+        <p><strong>Hibridación y geometría molecular:</strong> la hibridación es un concepto que explica cómo los átomos pueden mezclar sus orbitales atómicos para formar orbitales híbridos que se utilizan en la formación de enlaces covalentes. La geometría molecular resultante está determinada por la repulsión entre los pares de electrones alrededor del átomo central. </p>
+      </li>
+      <li>
+        <p><strong>Teoría del orbital molecular:</strong> esta teoría combina los orbitales atómicos de los átomos individuales para formar orbitales moleculares que abarcan toda la molécula. Los enlaces moleculares se forman por la superposición de estos orbitales moleculares, y la estabilidad de la molécula se explica por la ocupación de los orbitales moleculares por los electrones. </p>
+      </li>
+    </ul>
+    <p>En resumen, estas teorías proporcionan un marco para comprender cómo se forman y se mantienen los enlaces covalentes, así como la estructura y las propiedades de las moléculas resultantes. Combinadas, permiten explicar la forma de las moléculas, la naturaleza de los enlaces y la estabilidad de los compuestos químicos. </p>
   </main>
+  
+  <section class="section">
+    <a class="integrantes" href="/integrantes.html"><img src="/assets/members.svg" alt="Miembros"> Integrantes del equipo  </a> 
+    <aside>
+      <h3>Subtemas</h3>
+      <ul>
+        <li><a href="/introduccion.html">3.1. Introducción <img src="/assets/arrow.svg" alt=""></a></li>
+        <li><a href="/enlace-covalente.html">3.2. Enlace covalente <img src="/assets/arrow.svg" alt=""></a></li>
+        <li><a href="/enlace-ionico.html">3.3. Enlace iónico <img src="/assets/arrow.svg" alt=""></a></li>
+      </ul>
+    </aside>
+  </section>
 </body>
 </html>
