--- a/enlace-ionico.html
+++ b/enlace-ionico.html
@@ -34,9 +34,29 @@
       </ul>
     </div>
   </nav>
+  <header class="header">
+    <div>
+      <h1>
+        Enlace Ionico
+      </h1>
+      <img src="/assets/enlace-ionico.jpg" alt="nose" />
+    </div>
+  </header>
   <main class="main">
-    <h1>Enlace Ionico</h1>
-
+    <p>El enlace iónico se forma cuando átomos de diferentes elementos transfieren electrones entre sí para alcanzar una configuración electrónica estable. Esto resulta en la formación de iones cargados positiva y negativamente, que se atraen entre sí debido a sus cargas opuestas, creando compuestos iónicos. Estos compuestos tienden a tener altos puntos de fusión y ebullición debido a las fuertes fuerzas de atracción entre los iones.  </p>
+    <p>En términos de estructura, los compuestos iónicos adoptan una red cristalina tridimensional en la que los iones se organizan en patrones repetitivos. Cada ion está rodeado por iones de carga opuesta, lo que resulta en una estructura sólida y rígida.  </p>
+    <p>La energía reticular es la energía necesaria para separar completamente un mol de un compuesto iónico en sus iones constituyentes gaseosos. Es una medida de la fuerza del enlace iónico y depende del tamaño de los iones y de la carga de los mismos. Cuanto mayor sea la carga y más pequeños sean los iones, mayor será la energía reticular y, por lo tanto, más fuerte será el enlace iónico.</p>
   </main>
+  <section class="section">
+    <a class="integrantes" href="/integrantes.html"><img src="/assets/members.svg" alt="Miembros"> Integrantes del equipo  </a> 
+    <aside>
+      <h3>Subtemas</h3>
+      <ul>
+        <li><a href="/introduccion.html">3.1. Introducción <img src="/assets/arrow.svg" alt=""></a></li>
+        <li><a href="/enlace-covalente.html">3.2. Enlace covalente <img src="/assets/arrow.svg" alt=""></a></li>
+        <li><a href="/enlace-ionico.html">3.3. Enlace iónico <img src="/assets/arrow.svg" alt=""></a></li>
+      </ul>
+    </aside>
+  </section>
 </body>
 </html>
