--- a/index.html
+++ b/index.html
@@ -38,52 +38,11 @@
     <header class="header">
       <div>
         <h1>
-          Enlaces químicos
+          Enlazando Química
         </h1>
-        <img src="/assets/vinculo-quimico.webp" alt="nose" />
+        <img src="/assets/inicio.jpg" alt="nose" />
       </div>
     </header>
-    <main class="main">
-      <article>
-        <h2>Titulo del subtema</h2>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates
-          animi quam eum doloremque recusandae adipisci dolorem ullam quidem
-          voluptatibus mollitia officiis molestias quo dolores in saepe, nam
-          sit, eveniet delectus totam exercitationem quisquam reprehenderit
-          reiciendis enim? Obcaecati, possimus autem! Voluptate in sunt,
-          accusantium incidunt ex, ullam sint dignissimos earum assumenda hic
-          laudantium molestiae doloribus? Magni amet molestiae numquam iure
-          quaerat maxime nisi maiores nemo, laboriosam modi doloremque.
-          Dignissimos natus, in atque nostrum praesentium nam esse quaerat
-          dolore porro labore vitae?
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed sunt
-          vero totam, quisquam ipsa quasi, debitis nemo nobis at qui placeat,
-          assumenda sequi dicta nisi. Beatae nulla non temporibus praesentium
-          alias quibusdam labore. Veritatis quo illum aperiam, sapiente a quis
-          laudantium exercitationem rerum debitis vel nam quibusdam provident
-          nobis et unde autem eos facere magnam.
-        </p>
-        <img class="img" src="/assets/enlaces.webp" alt="nose" />
-      </article>
-      <article>
-        <h2>Titulo del subtema</h2>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates
-          animi quam eum doloremque recusandae adipisci dolorem ullam quidem
-          voluptatibus mollitia officiis molestias quo dolores in saepe, nam
-          sit, eveniet delectus totam exercitationem quisquam reprehenderit
-          reiciendis enim? Obcaecati, possimus autem! Voluptate in sunt,
-          accusantium incidunt ex, ullam sint dignissimos earum assumenda hic
-          laudantium molestiae doloribus? Magni amet molestiae numquam iure
-          quaerat maxime nisi maiores nemo, laboriosam modi doloremque.
-          Dignissimos natus, in atque nostrum praesentium nam esse quaerat
-          dolore porro labore vitae?
-        </p>
-        <img class="img" src="/assets/featured.webp" alt="nose" />
-      </article>
       <section class="section">
         <a class="integrantes" href="/integrantes.html"><img src="/assets/members.svg" alt="Miembros"> Integrantes del equipo  </a> 
         <aside>
@@ -95,6 +54,5 @@
           </ul>
         </aside>
       </section>
-    </main>
   </body>
 </html>
