--- a/integrantes.html
+++ b/integrantes.html
@@ -36,7 +36,7 @@
       </div>
     </nav>
     <main class="main">
-      <img class="banner" src="/assets/vinculo-quimico.webp" alt="nose" />
+      <img class="banner" src="/assets/inicio.jpg" alt="nose" />
       <h1><img src="/assets/members.svg" alt="Miembros"> Integrantes del equipo</h1>
       <ul>
         <li>
