--- a/introduccion.html
+++ b/introduccion.html
@@ -34,9 +34,35 @@
       </ul>
     </div>
   </nav>
+  <header class="header">
+    <div>
+      <h1>
+        Introducción
+      </h1>
+      <img src="/assets/introduccion.jpg" alt="nose" />
+    </div>
+  </header>
   <main class="main">
-    <h1>Introducción</h1>
-
+    <p>Los enlaces químicos son las fuerzas que mantienen unidos a los átomos en las moléculas y compuestos químicos. Estos enlaces se forman cuando los átomos interactúan entre sí mediante la transferencia o compartición de electrones en sus capas más externas.  </p>
+    <p>Existen tres tipos principales de enlaces químicos:    </p>
+    <ul>
+      <li><p><strong>Enlace iónico:</strong> se forma cuando los átomos transfieren electrones entre sí, creando iones con cargas opuestas que se atraen mutuamente. Este tipo de enlace ocurre entre átomos con grandes diferencias en su electronegatividad. </p></li>
+      <li><p><strong>Enlace covalente:</strong> se produce cuando dos átomos comparten uno o más pares de electrones. Este enlace es común entre átomos con electronegatividades similares y puede ser polar o no polar dependiendo de la diferencia en la electronegatividad de los átomos involucrados. </p></li>
+      <li><p><strong>Enlace metálico:</strong> ocurre en los metales, donde los átomos forman una red tridimensional en la cual los electrones se desplazan libremente entre los átomos. Este tipo de enlace es responsable de muchas de las propiedades características de los metales, como su conductividad eléctrica y térmica. </p></li>
+    </ul>
+    <p>La regla de octeto es una guía útil que establece que los átomos tienden a ganar, perder o compartir electrones de manera que adquieran una configuración electrónica estable con ocho electrones en su capa de valencia. Sin embargo, existen excepciones a esta regla, especialmente para átomos que tienen menos de ocho electrones en su capa de valencia, como el hidrógeno y el helio, así como para átomos con d orbitales disponibles, como los elementos de la tercera fila en la tabla periódica. Estas excepciones pueden explicarse mediante teorías más avanzadas, como la teoría del orbital molecular. </p>
+    <p>A pesar de su utilidad, la regla de octeto tiene algunas limitaciones. Por ejemplo, no explica completamente la formación de enlaces en moléculas con átomos que tienen un número impar de electrones de valencia, como el radical hidroxilo (•OH). Además, algunos compuestos, como los metales de transición, pueden formar enlaces con un número variable de electrones compartidos. A pesar de estas limitaciones, la regla de octeto sigue siendo una herramienta importante para comprender y predecir la formación de enlaces químicos en una amplia gama de compuestos. </p>
   </main>
+  <section class="section">
+    <a class="integrantes" href="/integrantes.html"><img src="/assets/members.svg" alt="Miembros"> Integrantes del equipo  </a> 
+    <aside>
+      <h3>Subtemas</h3>
+      <ul>
+        <li><a href="/introduccion.html">3.1. Introducción <img src="/assets/arrow.svg" alt=""></a></li>
+        <li><a href="/enlace-covalente.html">3.2. Enlace covalente <img src="/assets/arrow.svg" alt=""></a></li>
+        <li><a href="/enlace-ionico.html">3.3. Enlace iónico <img src="/assets/arrow.svg" alt=""></a></li>
+      </ul>
+    </aside>
+  </section>
 </body>
 </html>
