--- a/introduccion.html
+++ b/introduccion.html
@@ -3,7 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Enlazando Química</title>
+  <meta
+    name="description"
+    content="Los enlaces químicos son las fuerzas que mantienen unidos a los átomos en las moléculas y compuestos químicos. Estos enlaces se forman cuando los átomos interactúan entre sí mediante la transferencia o compartición de electrones en sus capas más externas."
+  />
+  <meta
+    name="keywords"
+    content="enlaces quimicos, enlace covalente, enlace ionico, covalente, ionico, compuestos químicos, unidad 3, compuestos quimicos, teorías"
+  />
+  <meta name="robots" content="index, follow" />
+  <meta name="author" content="MaximoJSDev" />
+  <link rel="canonical" href="https://enlazandoquimica.netlify.app/" />
+  <title>Enlazando Química - Introducción</title>
   <link rel="icon" href="/assets/logo.png" type="image/png" />
   <link rel="stylesheet" href="/styles/layout.css">
 </head>
@@ -39,7 +50,7 @@
       <h1>
         Introducción
       </h1>
-      <img src="/assets/introduccion.jpg" alt="nose" />
+      <img src="/assets/introduccion.jpg" alt="Ilustracion de Enlaces químicos" />
     </div>
   </header>
   <main class="main">
