Agrega meta tags

--- a/enlace-covalente.html
+++ b/enlace-covalente.html
@@ -3,7 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Enlazando Química</title>
+  <meta
+    name="description"
+    content="El enlace covalente es un tipo de enlace químico en el cual dos átomos comparten uno o más pares de electrones en su capa más externa. Este tipo de enlace se forma entre átomos con electronegatividades similares y puede ser polar o no polar según la diferencia en la electronegatividad de los átomos involucrados."
+  />
+  <meta
+    name="keywords"
+    content="enlaces quimicos, enlace covalente, enlace ionico, covalente, ionico, compuestos químicos, unidad 3, compuestos quimicos, teorías"
+  />
+  <meta name="robots" content="index, follow" />
+  <meta name="author" content="MaximoJSDev" />
+  <link rel="canonical" href="https://enlazandoquimica.netlify.app/" />
+  <title>Enlazando Química - Enlace covalente</title>
   <link rel="icon" href="/assets/logo.png" type="image/png" />
   <link rel="stylesheet" href="/styles/layout.css">
 </head>
@@ -39,7 +50,7 @@
       <h1>
         Enlace Covalente
       </h1>
-      <img src="/assets/enlace-covalente.jpg" alt="nose" />
+      <img src="/assets/enlace-covalente.jpg" alt="Ilustracion de Enlace covalente" />
     </div>
   </header>
   <main class="main">
