--- a/enlace-ionico.html
+++ b/enlace-ionico.html
@@ -3,7 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Enlazando Química</title>
+  <meta
+    name="description"
+    content="El enlace iónico se forma cuando átomos de diferentes elementos transfieren electrones entre sí para alcanzar una configuración electrónica estable. Esto resulta en la formación de iones cargados positiva y negativamente, que se atraen entre sí debido a sus cargas opuestas, creando compuestos iónicos. Estos compuestos tienden a tener altos puntos de fusión y ebullición debido a las fuertes fuerzas de atracción entre los iones."
+  />
+  <meta
+    name="keywords"
+    content="enlaces quimicos, enlace covalente, enlace ionico, covalente, ionico, compuestos químicos, unidad 3, compuestos quimicos, teorías"
+  />
+  <meta name="robots" content="index, follow" />
+  <meta name="author" content="MaximoJSDev" />
+  <link rel="canonical" href="https://enlazandoquimica.netlify.app/" />
+
+  <title>Enlazando Química - Enlace ionico</title>
   <link rel="icon" href="/assets/logo.png" type="image/png" />
   <link rel="stylesheet" href="/styles/layout.css">
 </head>
@@ -39,7 +51,7 @@
       <h1>
         Enlace Ionico
       </h1>
-      <img src="/assets/enlace-ionico.jpg" alt="nose" />
+      <img src="/assets/enlace-ionico.jpg" alt="Ilustracion de Enlace Ionico" />
     </div>
   </header>
   <main class="main">
