--- a/integrantes.html
+++ b/integrantes.html
@@ -3,7 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Enlazando Química</title>
+    <meta
+			name="description"
+			content="Los enlaces químicos son las fuerzas que mantienen unidos a los átomos en las moléculas y compuestos químicos. Estos enlaces se forman cuando los átomos interactúan entre sí mediante la transferencia o compartición de electrones en sus capas más externas."
+		/>
+		<meta
+			name="keywords"
+			content="enlaces quimicos, enlace covalente, enlace ionico, covalente, ionico, compuestos químicos, unidad 3, compuestos quimicos, teorías"
+		/>
+		<meta name="robots" content="index, follow" />
+		<meta name="author" content="MaximoJSDev" />
+		<link rel="canonical" href="https://enlazandoquimica.netlify.app/" />
+
+    <title>Enlazando Química - Integrantes</title>
     <link rel="icon" href="/assets/logo.png" type="image/png" />
     <link rel="stylesheet" href="/styles/layout.css">
     <link rel="stylesheet" href="/styles/integrantes.css">
@@ -37,10 +49,10 @@
     </nav>
     <main class="main">
       <img class="banner" src="/assets/inicio.jpg" alt="nose" />
-      <h1><img src="/assets/members.svg" alt="Miembros"> Integrantes del equipo</h1>
+      <h1><img src="/assets/members.svg" alt="Integrantes de enlazandoquimica"> Integrantes del equipo</h1>
       <ul>
         <li>
-          <img src="/assets/user.svg" alt="icono de usuario"> 
+          <img src="/assets/Loreto.jpg" alt="Avatar de Loreto"> 
           <p>
             Castellanos Loreto Francisco
             <span class="role">
@@ -49,7 +61,7 @@
           </p>
         </li>
         <li>
-          <img src="/assets/user.svg" alt="icono de usuario"> 
+          <img src="/assets/Geran-Vivani.jpg" alt="Avatar de Geran Vivani"> 
           <p>
             Geran Vivani Martinez Rasgado
             <span class="role">
@@ -58,7 +70,7 @@
           </p>
         </li>
         <li>
-          <img src="/assets/user.svg" alt="icono de usuario"> 
+          <img src="/assets/Yahir.jpg" alt="Avatar de Yahir"> 
           <p>
             Yahir Escobar Contreras
             <span class="role">
@@ -67,7 +79,7 @@
           </p>
         </li>
         <li>
-          <img src="/assets/user.svg" alt="icono de usuario"> 
+          <img src="/assets/Angel-Barrientos.jpg" alt="Avatar de Angel Barrientos"> 
           <p>
             Barrientos Tumalan Angel
             <span class="role">
@@ -76,7 +88,7 @@
           </p>
         </li>
         <li>
-          <img src="/assets/user.svg" alt="icono de usuario"> 
+          <img src="/assets/Mariana.jpg" alt="Avatar de Mariana"> 
           <p>
             Mariana Alejandra Leon González
             <span class="role">
