--- a/index.html
+++ b/index.html
@@ -3,8 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Enlazando Química</title>
+    <meta
+			name="description"
+			content="Los enlaces químicos son las fuerzas que mantienen unidos a los átomos en las moléculas y compuestos químicos. Estos enlaces se forman cuando los átomos interactúan entre sí mediante la transferencia o compartición de electrones en sus capas más externas."
+		/>
+		<meta
+			name="keywords"
+			content="enlaces quimicos, enlace covalente, enlace ionico, covalente, ionico, compuestos químicos, unidad 3, compuestos quimicos, teorías"
+		/>
+		<meta name="robots" content="index, follow" />
+		<meta name="author" content="MaximoJSDev" />
+		<link rel="canonical" href="https://enlazandoquimica.netlify.app/" />
+
+    <title>Enlazando Química - Enlaces químicos</title>
     <link rel="icon" href="/assets/logo.png" type="image/png" />
+    
     <link rel="stylesheet" href="/styles/layout.css">
     <link rel="stylesheet" href="/styles/style.css">
   </head>
@@ -40,7 +53,7 @@
         <h1>
           Enlazando Química
         </h1>
-        <img src="/assets/inicio.jpg" alt="nose" />
+        <img src="/assets/inicio.jpg" alt="Enlazando Quimica" />
       </div>
     </header>
       <section class="section">
