--- a/enlace-ionico.html
+++ b/enlace-ionico.html
@@ -1,74 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta
-    name="description"
-    content="El enlace iónico se forma cuando átomos de diferentes elementos transfieren electrones entre sí para alcanzar una configuración electrónica estable. Esto resulta en la formación de iones cargados positiva y negativamente, que se atraen entre sí debido a sus cargas opuestas, creando compuestos iónicos. Estos compuestos tienden a tener altos puntos de fusión y ebullición debido a las fuertes fuerzas de atracción entre los iones."
-  />
-  <meta
-    name="keywords"
-    content="enlaces quimicos, enlace covalente, enlace ionico, covalente, ionico, compuestos químicos, unidad 3, compuestos quimicos, teorías"
-  />
-  <meta name="robots" content="index, follow" />
-  <meta name="author" content="MaximoJSDev" />
-  <link rel="canonical" href="https://enlazandoquimica.netlify.app/" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="El enlace iónico se forma cuando átomos de diferentes elementos transfieren electrones entre sí para alcanzar una configuración electrónica estable. Esto resulta en la formación de iones cargados positiva y negativamente, que se atraen entre sí debido a sus cargas opuestas, creando compuestos iónicos. Estos compuestos tienden a tener altos puntos de fusión y ebullición debido a las fuertes fuerzas de atracción entre los iones."
+    />
+    <meta
+      name="keywords"
+      content="enlaces quimicos, enlace covalente, enlace ionico, covalente, ionico, compuestos químicos, unidad 3, compuestos quimicos, teorías"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="MaximoJSDev" />
+    <link rel="canonical" href="https://enlazandoquimica.netlify.app/" />
 
-  <title>Enlazando Química - Enlace ionico</title>
-  <link rel="icon" href="/assets/logo.png" type="image/png" />
-  <link rel="stylesheet" href="/styles/layout.css">
-</head>
-<body>
-  <nav class="nav">
-    <div>
-      <ul>
-        <li>
-          <a href="/">Enlaces químicos
-          </a>
-        </li>
-        <li>
-          <a href="/introduccion.html">Introducción
-          </a>
-        </li>
-        <li>
-          <a href="/enlace-covalente.html">Enlace covalente
-          </a>
-        </li>
-        <li>
-          <a href="/enlace-ionico.html">Enlace ionico
-          </a>
-        </li>
-        <li>
-          <a href="/integrantes.html">Integrantes
-          </a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <header class="header">
-    <div>
-      <h1>
-        Enlace Ionico
-      </h1>
-      <img src="/assets/enlace-ionico.jpg" alt="Ilustracion de Enlace Ionico" />
-    </div>
-  </header>
-  <main class="main">
-    <p>El enlace iónico se forma cuando átomos de diferentes elementos transfieren electrones entre sí para alcanzar una configuración electrónica estable. Esto resulta en la formación de iones cargados positiva y negativamente, que se atraen entre sí debido a sus cargas opuestas, creando compuestos iónicos. Estos compuestos tienden a tener altos puntos de fusión y ebullición debido a las fuertes fuerzas de atracción entre los iones.  </p>
-    <p>En términos de estructura, los compuestos iónicos adoptan una red cristalina tridimensional en la que los iones se organizan en patrones repetitivos. Cada ion está rodeado por iones de carga opuesta, lo que resulta en una estructura sólida y rígida.  </p>
-    <p>La energía reticular es la energía necesaria para separar completamente un mol de un compuesto iónico en sus iones constituyentes gaseosos. Es una medida de la fuerza del enlace iónico y depende del tamaño de los iones y de la carga de los mismos. Cuanto mayor sea la carga y más pequeños sean los iones, mayor será la energía reticular y, por lo tanto, más fuerte será el enlace iónico.</p>
-  </main>
-  <section class="section">
-    <a class="integrantes" href="/integrantes.html"><img src="/assets/members.svg" alt="Miembros"> Integrantes del equipo  </a> 
-    <aside>
-      <h3>Subtemas</h3>
-      <ul>
-        <li><a href="/introduccion.html">3.1. Introducción <img src="/assets/arrow.svg" alt=""></a></li>
-        <li><a href="/enlace-covalente.html">3.2. Enlace covalente <img src="/assets/arrow.svg" alt=""></a></li>
-        <li><a href="/enlace-ionico.html">3.3. Enlace iónico <img src="/assets/arrow.svg" alt=""></a></li>
-      </ul>
-    </aside>
-  </section>
-</body>
+    <title>Enlazando Química - Enlace ionico</title>
+    <link rel="icon" href="/assets/logo.png" type="image/png" />
+    <link rel="stylesheet" href="/styles/layout.css" />
+  </head>
+  <body>
+    <nav class="nav">
+      <div>
+        <ul>
+          <li>
+            <a href="/">Enlaces químicos </a>
+          </li>
+          <li>
+            <a href="/introduccion.html">Introducción </a>
+          </li>
+          <li>
+            <a href="/enlace-covalente.html">Enlace covalente </a>
+          </li>
+          <li>
+            <a href="/enlace-ionico.html">Enlace ionico </a>
+          </li>
+          <li>
+            <a href="/integrantes.html">Integrantes </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <header class="header">
+      <div>
+        <h1>Enlace Ionico</h1>
+        <img
+          src="/assets/enlace-ionico.jpg"
+          alt="Ilustracion de Enlace Ionico"
+        />
+      </div>
+    </header>
+    <main class="main">
+      <p>
+        El enlace iónico se forma cuando átomos de diferentes elementos
+        transfieren electrones entre sí para alcanzar una configuración
+        electrónica estable. Esto resulta en la formación de iones cargados
+        positiva y negativamente, que se atraen entre sí debido a sus cargas
+        opuestas, creando compuestos iónicos. Estos compuestos tienden a tener
+        altos puntos de fusión y ebullición debido a las fuertes fuerzas de
+        atracción entre los iones.
+      </p>
+      <p>
+        En términos de estructura, los compuestos iónicos adoptan una red
+        cristalina tridimensional en la que los iones se organizan en patrones
+        repetitivos. Cada ion está rodeado por iones de carga opuesta, lo que
+        resulta en una estructura sólida y rígida.
+      </p>
+      <p>
+        La energía reticular es la energía necesaria para separar completamente
+        un mol de un compuesto iónico en sus iones constituyentes gaseosos. Es
+        una medida de la fuerza del enlace iónico y depende del tamaño de los
+        iones y de la carga de los mismos. Cuanto mayor sea la carga y más
+        pequeños sean los iones, mayor será la energía reticular y, por lo
+        tanto, más fuerte será el enlace iónico.
+      </p>
+      <h2>Formacion y Propiedades de los Compuestos Ionicos</h2>
+      <p>
+        Los compuestos ionicos están fromados de cationes y aniones. Se
+        mantienen unidos por la diferencia de cargas electricas. En este tipo de
+        compuestos participan los atomos de los elementos que pertenecen a los
+        grupos 1, 2 y 13, que tienen 1, 2 o 3 electrones de valencia
+        respectivamente.
+      </p>
+      <h2>Redes Cristalinas</h2>
+      <p>
+        Es la forma solida de cómo se ordenan y empaquetan los átomos y
+        moléculas, o iones. Estos son empaquetados de manera ordenada y con
+        patones de repetición que se extienden en las tres demensiones del
+        espacio. La cristalografía es el estudio científico de los cristales y
+        su formación.
+      </p>
+      <h3>Estructura</h3>
+      <p>
+        Un sistema cristalino se construye a partir de la repetición en el
+        espacio de una estructura elemental paralelepipédica denominad celda
+        unitaria. Los siete sistemas de cristal son triclínico, monoclínico,
+        ortorrómbico, tetragonal, trigonal, hexagonal y cúbico
+      </p>
+      <h3>Energía Reticular</h3>
+      <p>
+        Es la energía necesaria para separar los iones de un reticulo cristlino
+        en iones gaseosos individuales se conoce como una energía de reticulo.
+        Esta depende de la fuerza de ñas intereacciones entre los cationes y los
+        aniones en el reticulo.
+      </p>
+      <p>Uno de los sólidos con mayor energía reticular es el LiF.</p>
+    </main>
+    <section class="section">
+      <a class="integrantes" href="/integrantes.html"
+        ><img src="/assets/members.svg" alt="Miembros" /> Integrantes del equipo
+      </a>
+      <aside>
+        <h3>Subtemas</h3>
+        <ul>
+          <li>
+            <a href="/introduccion.html"
+              >3.1. Introducción <img src="/assets/arrow.svg" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href="/enlace-covalente.html"
+              >3.2. Enlace covalente <img src="/assets/arrow.svg" alt=""
+            /></a>
+          </li>
+          <li>
+            <a href="/enlace-ionico.html"
+              >3.3. Enlace iónico <img src="/assets/arrow.svg" alt=""
+            /></a>
+          </li>
+        </ul>
+      </aside>
+    </section>
+  </body>
 </html>
